# bootloader-service

./: CONTRIBUTING.md  Cargo.toml  README.md
db/: selected_snapshot.sql
dbus/: org.opensuse.bootloader.conf
scripts/: clean_local_db.sh  run_dev.sh  setup_local_db.sh
src/: main.rs
src/config/: mod.rs
src/db/: grub2.rs  mod.rs  selected_snapshot.rs
src/dbus/: connection.rs  handler.rs
src/errors/: macros.rs  mod.rs
src/events/: mod.rs
src/grub2/: mod.rs
