[package]
name = "bootloader-service"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["rt", "macros", "tracing"] }
zbus = { version = "5.12.0", features = ["tokio"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.52", features = ["derive"] }
inotify = "0.11.0"
regex = "1.12.2"

[features]
dev = []
